--- a/sweeps/transformer.yaml
+++ b/sweeps/transformer.yaml
@@ -8,16 +8,16 @@ parameters:
     value: 10
   epochs_eval:
     value: 1
-  lr:
-    value: 0.0001
   dropout:
     value: 0.1
   input:
     value: symbol
   seq2seq:
     value: transformer
+  lr:
+    values: [0.0001, 0.00001]
   transformer:
-    values: ['opennmt', 'relative', 'relative_universal']
+    values: [opennmt, relative, relative_universal]
   layers:
     values: [1, 3, 6]
   hid_dim:
