--- a/sweeps/transformer_debug.yaml
+++ b/sweeps/transformer_debug.yaml
@@ -16,7 +16,7 @@ parameters:
     value: transformer
   lr:
     value: 0.001
-  lr_schedule:
+  lr_scheduler:
     value: warmup
   warmup_steps:
     values: [100, 200, 300]
