--- a/sweeps/rnn.yaml
+++ b/sweeps/rnn.yaml
@@ -13,8 +13,11 @@ parameters:
   seq2seq:
     values: [GRU, LSTM]
   layers:
-    values: [1, 3, 5]
+    value: 3
+    # values: [1, 3, 5]
   hid_dim:
-    values: [128, 256, 512]
+    value: 512
+    # values: [128, 256, 512]
   dropout:
-    values: [0.1, 0.5]
+    value: 0.5
+    # values: [0.1, 0.5]
