--- a/sweeps/transformer.yaml
+++ b/sweeps/transformer.yaml
@@ -5,7 +5,8 @@ metric:
   goal: maximize
 parameters:
   epochs:
-    value: 10
+    value: 100
+    # value: 10
   epochs_eval:
     value: 1
   dropout:
@@ -19,8 +20,11 @@ parameters:
   transformer:
     values: [opennmt, relative, relative_universal]
   nhead:
-    values: [4, 8]
+    value: 8
+    # values: [4, 8]
   layers:
-    values: [3, 6]
+    value: 3
+    # values: [3, 6]
   hid_dim:
-    values: [128, 256]
+    value: 128
+    # values: [128, 256]
