--- a/sweeps/rnn.yaml
+++ b/sweeps/rnn.yaml
@@ -4,20 +4,24 @@ metric:
   name: test/result_acc/avg
   goal: maximize
 parameters:
-  epochs:
-    value: 10
-  epochs_eval:
-    value: 1
   input:
     value: symbol
   seq2seq:
     values: [GRU, LSTM]
+  batch_size:
+    value: 128
+  iterations:
+    value: 10000
+  iterations_eval:
+    value: 1000
+  dropout:
+    value: 0.5
+    # values: [0.1, 0.5]
+  lr:
+    value: 0.001
   layers:
     value: 3
     # values: [1, 3, 5]
   hid_dim:
     value: 512
     # values: [128, 256, 512]
-  dropout:
-    value: 0.5
-    # values: [0.1, 0.5]
