--- a/sweeps/transformer.yaml
+++ b/sweeps/transformer.yaml
@@ -4,21 +4,22 @@ metric:
   name: test/result_acc/avg
   goal: maximize
 parameters:
-  epochs:
-    value: 100
-    # value: 10
-  epochs_eval:
-    value: 1
-  dropout:
-    value: 0.1
   input:
     value: symbol
   seq2seq:
     value: transformer
-  lr:
-    value: 0.001
   transformer:
     values: [opennmt, relative, relative_universal]
+  batch_size:
+    value: 128
+  iterations:
+    value: 100000
+  iterations_eval:
+    value: 1000
+  dropout:
+    value: 0.1
+  lr:
+    value: 0.001
   nhead:
     value: 8
     # values: [4, 8]
