--- a/sweeps/rnn.yaml
+++ b/sweeps/rnn.yaml
@@ -9,7 +9,7 @@ parameters:
   result_encoding:
     value: sin
   seq2seq:
-    values: [LSTM, GRU]
+    value: LSTM
   batch_size:
     value: 128
   iterations:
@@ -22,8 +22,8 @@ parameters:
   lr:
     value: 0.001
   layers:
-    value: 3
-    # values: [1, 3, 5]
+    # value: 3
+    values: [6, 9, 12]
   hid_dim:
     value: 512
     # values: [128, 256, 512]
