--- a/sweeps/transformer.yaml
+++ b/sweeps/transformer.yaml
@@ -10,27 +10,27 @@ parameters:
   seq2seq:
     value: transformer
   transformer:
-    values: [opennmt, relative, relative_universal]
-    # value: relative_universal
+    # values: [relative_universal, relative, opennmt]
+    value: relative_universal
   result_encoding:
     value: decimal
     # values: [decimal, binary]
   batch_size:
     value: 128
+  lr:
+    value: 0.001
   iterations:
     value: 100000
   iterations_eval:
     value: 1000
   dropout:
     value: 0.1
-  lr:
-    value: 0.001
   nhead:
     value: 8
     # values: [4, 8]
   layers:
-    value: 3
-    # values: [3, 6, 9]
+    # value: 3
+    values: [3, 6, 9]
   hid_dim:
-    value: 128
-    # values: [128, 256]
+    # value: 128
+    values: [128, 256, 512]
