--- a/sweeps/debug.yaml
+++ b/sweeps/debug.yaml
@@ -5,10 +5,8 @@ metric:
   name: test/result_acc/avg
   goal: maximize
 parameters:
-  epochs:
-    value: 1
-  epochs_eval:
-    value: 1
+  iterations:
+    value: 10000
   dropout:
     value: 0.1
   input:
@@ -22,6 +20,6 @@ parameters:
   nhead:
     value: 4
   layers:
-    value: 1
+    values: [1, 3]
   hid_dim:
     value: 128
