--- a/sweeps/transformer.yaml
+++ b/sweeps/transformer.yaml
@@ -18,7 +18,8 @@ parameters:
   batch_size:
     value: 128
   lr:
-    value: 0.001
+    # value: 0.001
+    values: [0.0001, 0.00001]
   iterations:
     value: 100000
   iterations_eval:
@@ -29,8 +30,8 @@ parameters:
     value: 8
     # values: [4, 8]
   layers:
-    # value: 3
-    values: [3, 6, 9]
+    value: 3
+    # values: [3, 6, 9]
   hid_dim:
-    # value: 128
-    values: [128, 256, 512]
+    value: 256
+    # values: [128, 256, 512]
