--- a/sweeps/debug.yaml
+++ b/sweeps/debug.yaml
@@ -5,23 +5,33 @@ metric:
   name: test/result_acc/avg
   goal: maximize
 parameters:
-  iterations:
-    value: 10000
-  iterations_eval:
-    value: 1000
-  dropout:
-    value: 0.1
   input:
     value: symbol
   seq2seq:
     value: transformer
+  transformer:
+    # values: [relative_universal, relative, opennmt]
+    value: relative_universal
+  result_encoding:
+    value: sin
+    # values: [decimal, sin, binary]
+  batch_size:
+    value: 128
   lr:
     value: 0.001
-  transformer:
-    value: relative
+    # values: [0.0001, 0.00001]
+  iterations:
+    value: 100000
+  iterations_eval:
+    value: 100
+  dropout:
+    value: 0.1
   nhead:
-    value: 4
+    value: 8
+    # values: [4, 8]
   layers:
-    values: [1, 3]
+    value: 3
+    # values: [3, 6, 9]
   hid_dim:
     value: 128
+    # values: [128, 256, 512]
