--- a/sweeps/rnn.yaml
+++ b/sweeps/rnn.yaml
@@ -7,6 +7,8 @@ metric:
 parameters:
   input:
     value: symbol
+  save_model:
+    value: yes
   result_encoding:
     value: decimal
     # values: [sin, decimal, binary]
