--- a/sweeps/rnn.yaml
+++ b/sweeps/rnn.yaml
@@ -8,7 +8,7 @@ parameters:
   input:
     value: symbol
   save_model:
-    value: yes
+    value: True
   result_encoding:
     value: decimal
     # values: [sin, decimal, binary]
