--- a/sweeps/transformer.yaml
+++ b/sweeps/transformer.yaml
@@ -36,7 +36,8 @@ parameters:
     # values: [3, 6, 9]
     value: 9
   dec_layers:
-    values: [1, 3, 6]
+    value: 1
+    # values: [1, 3, 6]
   hid_dim:
     value: 512
     # values: [128, 256, 512]
