--- a/sweeps/transformer.yaml
+++ b/sweeps/transformer.yaml
@@ -33,8 +33,8 @@ parameters:
     # value: 6
     # values: [3, 6, 9]
   enc_layers:
-    # values: [3, 6, 9]
-    value: 9
+    values: [12, 9, 6]
+    # value: 9
   dec_layers:
     value: 1
     # values: [1, 3, 6]
