--- a/sweeps/rnn.yaml
+++ b/sweeps/rnn.yaml
@@ -13,7 +13,7 @@ parameters:
     value: decimal
     # values: [sin, decimal, binary]
   model:
-    values: [GRU_attn, GRU]
+    value: LSTM
     # values: [LSTM_attn, GRU_attn, LSTM, GRU]
   batch_size:
     value: 128
@@ -28,9 +28,14 @@ parameters:
     # values: [0.1, 0.5]
   lr:
     value: 0.001
-  layers:
-    value: 3
-    # values: [3, 6, 9]
+  # layers:
+  #   value: 3
+  #   # values: [3, 6, 9]
+  enc_layers:
+    values: [1, 3, 6]
+  dec_layers:
+    value: 1
+    # values: [1, 3, 6]
   hid_dim:
     value: 512
     # values: [128, 256, 512]
