--- a/sweeps/rnn_image.yaml
+++ b/sweeps/rnn_image.yaml
@@ -10,42 +10,38 @@ parameters:
   perception_pretrain:
     values: ""
     # values: ["", "imagenet"]
-  model:
-    # value: TRAN.relative_universal
-    # values: [TRAN.relative, TRAN.opennmt]
-    values: [TRAN.relative_universal, TRAN.relative, TRAN.opennmt]
+  save_model:
+    value: True
   result_encoding:
     value: decimal
-    # values: [decimal, sin, binary]
+    # values: [sin, decimal, binary]
+  model:
+    # value: LSTM
+    values: [LSTM_attn, GRU_attn, LSTM, GRU]
   batch_size:
     value: 32
-  lr:
-    value: 0.0001
-    # values: [0.001, 0.0001, 0.00001]
   iterations:
     value: 200000
   iterations_eval:
     value: 1000
   early_stop:
-    value: 50
+    value: 10
   dropout:
     value: 0.1
-  nhead:
-    value: 8
-    # values: [4, 8]
+    # values: [0.1, 0.5]
+  lr:
+    value: 0.001
   # layers:
-    # value: 6
-    # values: [3, 6, 9]
+  #   value: 3
+  #   # values: [3, 6, 9]
   enc_layers:
-    value: 6
-    # values: [3, 6, 9, 12]
+    value: 3
+    # values: [1, 3, 6]
   dec_layers:
     value: 1
     # values: [1, 3, 6]
   hid_dim:
     value: 512
     # values: [128, 256, 512]
-  max_rel_pos:
-    value: 15
   # seed:
-    # values: [0,1,2]
+  #   values: [0,1,2]
