--- a/sweeps/debug_image.yaml
+++ b/sweeps/debug_image.yaml
@@ -8,7 +8,7 @@ parameters:
   input:
     value: image
   perception_pretrain:
-    value: "imagenet"
+    value: ""
   model:
     value: TRAN.relative_universal
     # values: [TRAN.relative, TRAN.opennmt]
