--- a/sweeps/transformer_image.yaml
+++ b/sweeps/transformer_image.yaml
@@ -8,7 +8,7 @@ parameters:
   input:
     value: image
   perception_pretrain:
-    values: ""
+    value: ""
     # values: ["", "imagenet"]
   model:
     # value: TRAN.relative_universal
