--- a/sweeps/transformer_image.yaml
+++ b/sweeps/transformer_image.yaml
@@ -5,6 +5,8 @@ metric:
   name: test/result_acc/avg
   goal: maximize
 parameters:
+  save_model:
+    value: True
   input:
     value: image
   perception_pretrain:
