--- a/sweeps/transformer_image_fewshot.yaml
+++ b/sweeps/transformer_image_fewshot.yaml
@@ -8,8 +8,8 @@ parameters:
   save_model:
     value: True
   fewshot:
-    value: 'x'
-    # values: ['x', 'y', 'a', 'b', 'c', 'd']
+    # value: 'x'
+    values: ['x', 'y', 'a', 'b', 'c', 'd']
   input:
     value: image
   resume:
@@ -27,12 +27,12 @@ parameters:
   batch_size:
     value: 128
   lr:
-    value: 0.0001
+    value: 0.00001
     # values: [0.001, 0.0001, 0.00001]
   iterations:
-    value: 10000
-  iterations_eval:
     value: 1000
+  iterations_eval:
+    value: 100
   early_stop:
     value: 50
   dropout:
