--- a/sweeps/transformer_image_data_efficiency.yaml
+++ b/sweeps/transformer_image_data_efficiency.yaml
@@ -51,5 +51,5 @@ parameters:
     # values: [128, 256, 512]
   max_rel_pos:
     value: 15
-  # seed:
-  #   values: [0,1,2]
+  seed:
+    values: [1,2]
