--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ data/symbol_images
 data/expr_images
 data/figures
 data/*.json*
+data/gpt3/*.json*
 data/perception_pretrain
 data/*.zip
 *__pycache__*
