--- a/sweeps/rnn.yaml
+++ b/sweeps/rnn.yaml
@@ -1,4 +1,4 @@
-project: HINT
+project: HINT_main_res_symbol
 program: train.py
 method: grid
 metric:
@@ -41,4 +41,4 @@ parameters:
     value: 512
     # values: [128, 256, 512]
   seed:
-    values: [0,1,2]
+    values: [3,4]
