--- a/sweeps/transformer.yaml
+++ b/sweeps/transformer.yaml
@@ -40,7 +40,7 @@ parameters:
     value: 1
     # values: [1, 3, 6]
   nhead:
-    values: [4, 8, 12]
+    values: [4, 8]
   hid_dim:
     # value: 512
     values: [128, 256, 512, 768, 1024]
